--- a/frontend/src/Scss/Pages/Skillpage/_skill-card.scss
+++ b/frontend/src/Scss/Pages/Skillpage/_skill-card.scss
@@ -1,3 +1,4 @@
+@use "../../General/" as g;
 .skill-card-con {
   cursor: pointer;
   transition: all 0.3s ease-in-out;
@@ -8,21 +9,21 @@
     position: relative;
     border-radius: 17px; /*1*/
     border: 2px solid transparent;
-    background: $borderGrad border-box;
+    background: g.$borderGrad border-box;
     -webkit-mask-composite: xor;
     mask-composite: exclude;
     h4 {
       font-size: 2.4rem;
-      color: $fontColor;
+      color: g.$fontColor;
       padding: 5rem;
-      background-image: $bgGrad;
+      background-image: g.$bgGrad;
       border-radius: 17px;
       display: flex;
       align-items: center;
       justify-content: center;
       z-index: 10000;
       &.active {
-        @include animatedHoverGrad();
+        @include g.animatedHoverGrad();
       }
     }
     .skill-svg {
@@ -30,14 +31,14 @@
       display: inline-block;
       border-radius: 8px;
       border: 2px solid transparent;
-      background: $borderGrad border-box;
+      background: g.$borderGrad border-box;
       -webkit-mask-composite: xor;
       mask-composite: exclude;
       top: -25px;
       left: -25px;
       .svg {
         padding: 1rem;
-        background-image: $bgGrad;
+        background-image: g.$bgGrad;
         display: inline-block;
         border-radius: 8px;
       }
