--- a/frontend/src/Scss/Components/_button-hover.scss
+++ b/frontend/src/Scss/Components/_button-hover.scss
@@ -1,3 +1,4 @@
+@use "../General/" as g;
 .button-con {
   a {
     span {
@@ -11,10 +12,10 @@
         background: linear-gradient(
           90deg,
           transparent,
-          lighten($fontColor, 10%)
+          lighten(g.$fontColor, 10%)
         );
         border-radius: 7px;
-        box-shadow: inset 0 0 5px $primary;
+        box-shadow: inset 0 0 5px g.$primary;
       }
     }
     &:hover {
@@ -36,10 +37,10 @@
         background: linear-gradient(
           90deg,
           transparent,
-          lighten($fontColor, 10%)
+          lighten(g.$fontColor, 10%)
         );
         border-radius: 7px;
-        box-shadow: inset 0 0 5px $primary;
+        box-shadow: inset 0 0 5px g.$primary;
       }
     }
     &:hover {
@@ -59,9 +60,9 @@
         right: 0;
         width: 3px;
         height: 100%;
-        background: linear-gradient(180deg, transparent, $fontColor);
+        background: linear-gradient(180deg, transparent, g.$fontColor);
         border-radius: 7px;
-        box-shadow: inset 0 0 5px $primary;
+        box-shadow: inset 0 0 5px g.$primary;
       }
     }
     &:hover {
@@ -81,9 +82,9 @@
         left: 0;
         width: 3px;
         height: 100%;
-        background: linear-gradient(360deg, transparent, $fontColor);
+        background: linear-gradient(360deg, transparent, g.$fontColor);
         border-radius: 7px;
-        box-shadow: inset 0 0 5px $primary;
+        box-shadow: inset 0 0 5px g.$primary;
       }
     }
     &:hover {
