--- a/frontend/src/Scss/Components/_navbar.scss
+++ b/frontend/src/Scss/Components/_navbar.scss
@@ -1,3 +1,4 @@
+@use "../General/" as g;
 .nav-bar {
   width: 100%;
   display: flex;
@@ -16,7 +17,7 @@
 
       cursor: pointer;
       .logo-text {
-        color: $fontColor;
+        color: g.$fontColor;
         font-size: 3.2rem;
         display: flex;
         align-items: center;
@@ -24,10 +25,15 @@
       .logo-img {
         height: 100%;
         align-items: center;
+        width: 100%;
+        img {
+          width: 100%;
+          height: 100%;
+        }
       }
     }
     .nav-links {
-      color: $fontColor;
+      color: g.$fontColor;
       font-size: 2rem;
       font-weight: 500;
       display: flex;
@@ -39,54 +45,42 @@
         li {
           cursor: pointer;
           position: relative;
-          &:hover {
-            opacity: 1;
-          }
-          &::before {
-            transition: 500ms;
-            height: 5px;
-            content: "";
-            position: absolute;
-            background-color: $fontColor;
-            box-shadow: inset 0 0 3px $primary;
-            border-radius: 7px;
-            width: 0%;
-            top: 30px;
-          }
-          &:hover::before,
-          &:active::before {
-            width: 100%;
-          }
-          a {
-            cursor: pointer;
-            position: relative;
-            &:hover {
-              opacity: 1;
-            }
-            &::before {
-              transition: 500ms;
-              height: 12px;
-              content: "";
-              position: absolute;
-              background-color: $primary;
-              z-index: -1;
-              filter: blur(10px);
-              border-radius: 7px;
-              width: 0%;
-              top: 25px;
-            }
-            &:hover::before,
-            &:active::before {
-              width: 105%;
-            }
-          }
+          @include g.neonUnderline();
         }
+      }
+    }
+    .nav-sm-hamburger {
+      align-items: center;
+      display: none;
+      .svg {
+        padding: 1rem;
+        background-color: g.$primary;
+        border-radius: 8px;
       }
     }
     .nav-button-container {
       display: flex;
       align-items: center;
       z-index: 10000;
+    }
+  }
+}
+@media (max-width: 820px) {
+  .container {
+    nav {
+      .nav-links {
+        display: none;
+      }
+      .nav-button-container {
+        display: none;
+      }
+      .nav-sm-hamburger {
+        display: flex;
+        padding: 1rem;
+        &:hover {
+          // transform: scale(1.1);
+        }
+      }
     }
   }
 }
