--- a/frontend/src/Scss/Components/_neon-light.scss
+++ b/frontend/src/Scss/Components/_neon-light.scss
@@ -1,8 +1,9 @@
+@use "../General/" as g;
 .neonlight-con {
   height: 100%;
   width: 15%;
   .neon-light {
-    display: inline-block;
+    display: flex;
     position: relative;
     &::after {
       display: inline-block;
@@ -10,8 +11,8 @@
       height: 48.2rem;
       width: 1.6rem;
       border-radius: 9px;
-      background-color: $fontColor;
-      box-shadow: inset 0 0 10px $primary;
+      background-color: g.$fontColor;
+      box-shadow: inset 0 0 10px g.$primary;
       z-index: 1;
       position: absolute;
       left: 40px;
@@ -22,7 +23,7 @@
       display: inline-block;
       height: 54.7rem;
       width: 11.1rem;
-      background-color: $primary;
+      background-color: g.$primary;
       filter: blur(72px);
       z-index: -30;
       position: absolute;
