--- a/frontend/src/Scss/Components/_sticky-nav.scss
+++ b/frontend/src/Scss/Components/_sticky-nav.scss
@@ -1,3 +1,4 @@
+@use "../General/" as g;
 .sticky-nav {
   position: fixed;
   top: -100%;
@@ -11,5 +12,5 @@
   top: 0;
 }
 .nav-style {
-  @include glassEffect();
+  @include g.glassEffect();
 }
