--- a/frontend/src/Scss/Pages/ContactPage/_contact-form.scss
+++ b/frontend/src/Scss/Pages/ContactPage/_contact-form.scss
@@ -1,3 +1,4 @@
+@use "../../General/" as g;
 .form-con {
   .form {
     display: flex;
@@ -5,7 +6,7 @@
     gap: 3.6rem;
     position: relative;
     &::after {
-      @include elipse($secondary);
+      @include g.elipse(g.$secondary);
       bottom: -100px;
       right: -250px;
     }
@@ -14,28 +15,28 @@
       flex-direction: column;
       label {
         font-size: 1.6rem;
-        color: $lightGray;
+        color: g.$lightGray;
         font-weight: 600;
       }
       input[type="text"],
       input[type="email"] {
         height: 3.6rem;
         border-radius: 8px;
-        box-shadow: inset 0 0 10px $primary;
+        box-shadow: inset 0 0 10px g.$primary;
         font-size: 1.6rem;
         padding-left: 1rem;
         font-family: inherit;
-        background-color: $fontColor;
+        background-color: g.$fontColor;
         font-family: "Raleway", sans-serif;
         font-weight: 600;
       }
 
       textarea {
         border-radius: 8px;
-        box-shadow: inset 0 0 10px $primary;
+        box-shadow: inset 0 0 10px g.$primary;
         padding: 1rem;
         font-size: 1.6rem;
-        background-color: $fontColor;
+        background-color: g.$fontColor;
         font-family: "Raleway", sans-serif;
         font-weight: 600;
       }
