Finish responsive design for about section

--- a/frontend/src/Scss/General/_base.scss
+++ b/frontend/src/Scss/General/_base.scss
@@ -8,13 +8,13 @@
 }
 html {
   font-size: 62.5%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
   font-family: "Raleway", sans-serif;
   background-color: g.$bgColor;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 ul {
   padding: 0;
