--- a/frontend/src/Scss/Components/_nav-sm.scss
+++ b/frontend/src/Scss/Components/_nav-sm.scss
@@ -7,8 +7,13 @@
   height: 100%;
   z-index: 9000000;
   transition: all ease-in-out 800ms;
-  nav {
+  .navsm {
     position: relative;
+    width: 80%;
+    height: 100vh;
+    border-right: 3px solid transparent;
+    background: g.$borderGrad border-box;
+    -webkit-mask-composite: xor;
     .nav-sm-svg {
       position: absolute;
       right: 10%;
@@ -17,19 +22,13 @@
       background-color: g.$primary;
       border-radius: 8px;
     }
-    width: 60%;
-    height: 100%;
-
-    border-right: 3px solid transparent;
-    background: g.$borderGrad border-box;
-    -webkit-mask-composite: xor;
     mask-composite: exclude;
     .nav-sm-links {
       padding: 0.5rem 1rem;
       @include g.animatedHoverGrad();
       display: inline-block;
       width: 100%;
-      height: 100%;
+      height: 100vh;
       display: grid;
       align-items: center;
       padding-left: 3rem;
