--- a/frontend/src/Scss/Components/_navbar.scss
+++ b/frontend/src/Scss/Components/_navbar.scss
@@ -78,7 +78,7 @@
         display: flex;
         padding: 1rem;
         &:hover {
-          // transform: scale(1.1);
+          transform: scale(1.1);
         }
       }
     }
