--- a/frontend/src/Scss/Pages/AboutPage/_about-page.scss
+++ b/frontend/src/Scss/Pages/AboutPage/_about-page.scss
@@ -2,8 +2,17 @@
 .about {
   margin-bottom: 25.6rem;
   .content-con {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     gap: 6.4rem;
+    .image-con {
+      width: 100%;
+      height: 100%;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
     .info-con {
       display: flex;
       flex-direction: column;
@@ -23,6 +32,57 @@
         }
         p {
           line-height: 30px;
+        }
+      }
+    }
+  }
+}
+//1800px
+@media (max-width: 112.5em) {
+  .about {
+    .content-con {
+      gap: 0;
+    }
+  }
+}
+//880px
+@media (max-width: 55em) {
+  .about {
+    .content-con {
+      .info-con {
+        .heading {
+          h2 {
+            font-size: 3.8rem;
+          }
+        }
+      }
+    }
+  }
+}
+//750px
+@media (max-width: 46.87em) {
+  .about {
+    .content-con {
+      grid-template-columns: 1fr;
+      .image-con {
+        display: flex;
+        justify-content: center;
+        img {
+          width: 70%;
+        }
+      }
+      .info-con {
+        padding: 2.6rem;
+        .heading {
+          h2 {
+            font-size: 4.4rem;
+          }
+        }
+        .desc {
+          p {
+            font-size: 2.4rem;
+            line-height: 4rem;
+          }
         }
       }
     }
