--- a/frontend/src/Scss/Pages/HeroPage/_hero-page.scss
+++ b/frontend/src/Scss/Pages/HeroPage/_hero-page.scss
@@ -180,3 +180,9 @@
     font-size: 37.5% !important;
   }
 }
+//320{
+@media (max-width: 21.25em) {
+  html {
+    font-size: 31.25% !important;
+  }
+}
