--- a/frontend/src/Scss/General/_base.scss
+++ b/frontend/src/Scss/General/_base.scss
@@ -1,5 +1,7 @@
 @use "./variables" as g;
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
 * {
   padding: 0;
   margin: 0;
