--- a/frontend/src/Scss/Pages/Skillpage/_skill-card.scss
+++ b/frontend/src/Scss/Pages/Skillpage/_skill-card.scss
@@ -7,17 +7,17 @@
   }
   .skill-name {
     position: relative;
-    border-radius: 17px; /*1*/
+    border-radius: 1.7rem; /*1*/
     border: 2px solid transparent;
     background: g.$borderGrad border-box;
     -webkit-mask-composite: xor;
     mask-composite: exclude;
     h4 {
-      font-size: 2.4rem;
+      font-size: 2.1rem;
       color: g.$fontColor;
       padding: 5rem;
       background-image: g.$bgGrad;
-      border-radius: 17px;
+      border-radius: 1.7rem;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -29,7 +29,7 @@
     .skill-svg {
       position: absolute;
       display: inline-block;
-      border-radius: 8px;
+      border-radius: 0.8rem;
       border: 2px solid transparent;
       background: g.$borderGrad border-box;
       -webkit-mask-composite: xor;
@@ -40,7 +40,31 @@
         padding: 1rem;
         background-image: g.$bgGrad;
         display: inline-block;
-        border-radius: 8px;
+        border-radius: 0.8rem;
+        svg {
+          font-size: 2.4rem;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 48.43em) {
+  .skill-card-con {
+    .skill-name {
+      h4 {
+      }
+      .skill-svg {
+        top: -15px;
+        left: -15px;
+        .svg {
+          padding: 1rem;
+          background-image: g.$bgGrad;
+          display: inline-block;
+          border-radius: 0.8rem;
+          svg {
+            font-size: 2.4rem;
+          }
+        }
       }
     }
   }
