--- a/frontend/src/Scss/Pages/AllProjects/all-projects.scss
+++ b/frontend/src/Scss/Pages/AllProjects/all-projects.scss
@@ -19,6 +19,9 @@
       button {
         padding: 1rem;
         background-color: #484848;
+        svg {
+          font-size: 3.8rem;
+        }
       }
     }
   }
@@ -30,12 +33,16 @@
   .button-con {
     .all-p {
       position: fixed;
-      bottom: 100px;
-      right: 100px;
-      border-radius: 20px;
+      bottom: 10rem;
+      right: 10rem;
+      border-radius: 2rem;
       transform: scale(0);
       transition: 200ms ease-in-out;
       padding: 1rem !important;
+      z-index: 1000;
+      svg {
+        font-size: 4.2rem;
+      }
     }
     .show {
       transform: scale(1.1);
@@ -95,3 +102,5 @@
     background-position: 2% 0%;
   }
 }
+
+// @media;
