--- a/frontend/src/Scss/Pages/Skillpage/_skill-page.scss
+++ b/frontend/src/Scss/Pages/Skillpage/_skill-page.scss
@@ -99,6 +99,7 @@
     .content-con {
       display: flex;
       flex-direction: column;
+      gap: 8.4rem;
       .skill-con {
         width: 100%;
         .skill-cards {
