--- a/admin/src/Scss/General/_utilities.scss
+++ b/admin/src/Scss/General/_utilities.scss
@@ -10,7 +10,8 @@ label {
   font-weight: 500;
 }
 input,
-textarea {
+textarea,
+select {
   padding: 1rem;
   border-radius: 12px;
   box-shadow: inset 0 0 10px g.$primary;
@@ -23,4 +24,12 @@ textarea {
   font-family: "Raleway", sans-serif;
   font-weight: 600;
   color: g.$darkGray;
+}
+
+.visible-pop-up {
+  top: 5% !important;
+  transition: all ease-in-out 1s;
+}
+.opacity-pop-up {
+  opacity: 0;
 }
