--- a/admin/src/Scss/Pages/AddProjectPanel/_add-panel.scss
+++ b/admin/src/Scss/Pages/AddProjectPanel/_add-panel.scss
@@ -1,14 +1,17 @@
-.add-project-con {
+.add-con {
   display: flex;
   flex-direction: column;
   padding: 4.8rem;
   gap: 3.6rem;
   width: 100%;
+  padding-top: 1rem;
   .form-con {
-    form {
+    .form {
       display: flex;
       flex-direction: column;
+
       gap: 2.4rem;
+
       .inputs {
         display: grid;
         grid-template-columns: 3fr 2fr;
@@ -17,14 +20,27 @@
           display: flex;
           align-items: center;
           justify-content: center;
+          .image-skill-input {
+            display: grid;
+            grid-template-rows: 1fr 1fr;
+            height: 100%;
+            row-gap: 3.6rem;
+          }
         }
         .text-inputs {
           display: flex;
           flex-direction: column;
           gap: 2.6rem;
-          .project-label {
+          .add-label {
             display: flex;
             flex-direction: column;
+            &:nth-child(4) {
+              position: relative;
+              .button-con {
+                position: absolute;
+                top: 9rem;
+              }
+            }
           }
         }
       }
