--- a/admin/src/Scss/style.scss
+++ b/admin/src/Scss/style.scss
@@ -2,7 +2,8 @@
 @use "./Pages/AdminPanel/admin-panel.scss";
 @use "./Pages/MainPanel/main-panel.scss";
 @use "./Pages/Messages/messages.scss";
-@use "./Pages/AddProjectPanel/add-project-panel.scss";
+@use "./Pages/AddProjectPanel/add-panel.scss";
+@use "./Pages/AddProjectPanel/skill-input";
 //componets
 @use "./Pages/Aside/Aside.scss";
 @use "./Components/action-button.scss";
@@ -11,3 +12,4 @@
 @use "./Pages/Messages/message.scss";
 @use "./General/utilities";
 @use "./Pages/AddProjectPanel/image-input";
+@use "./Components/pop-up";
