Add logic for displaying skills on a project card

--- a/frontend/src/Scss/Components/_tech-info.scss
+++ b/frontend/src/Scss/Components/_tech-info.scss
@@ -4,8 +4,8 @@
   width: fit-content;
   .tech-info {
     display: inline-block;
-    border-radius: 8px;
-    border: 2px solid transparent;
+    border-radius: 0.8rem;
+    border: 0.2rem solid transparent;
     background: g.$borderGrad border-box;
     -webkit-mask-composite: xor;
     mask-composite: exclude;
@@ -14,7 +14,7 @@
       padding: 1rem;
       background-image: g.$bgGrad;
       display: inline-block;
-      border-radius: 8px;
+      border-radius: 0.8rem;
       font-size: 1.8rem;
       text-transform: capitalize;
       color: g.$fontColor;
