--- a/frontend/src/Scss/Pages/HeroPage/_cv-download.scss
+++ b/frontend/src/Scss/Pages/HeroPage/_cv-download.scss
@@ -7,66 +7,57 @@
     flex-direction: column;
     align-items: center;
     background-image: g.$priSecGrad;
-    padding: 2rem 3rem;
-    border-radius: 60%;
-    top: 1px;
+    padding: 3rem;
+    border-radius: 100rem;
+    top: 0.1rem;
     right: 0;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
     &::before {
       content: " ";
       display: inline-block;
       background-image: g.$priSecGrad;
-      height: 130%;
+      height: 140%;
       width: 130%;
       position: absolute;
       z-index: -10000;
-      top: -15px;
-      border-radius: 50%;
+      top: -20%;
+      border-radius: 100rem;
       box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
       opacity: 60%;
     }
     .third-ellipse {
       display: inline-block;
       background-image: g.$priSecGrad;
-      height: 160%;
+      height: 170%;
       width: 160%;
       position: absolute;
       z-index: -10000;
       top: -30px;
-      border-radius: 50%;
+      border-radius: 100rem;
       opacity: 40%;
     }
     .text {
       color: g.$fontColor;
       font-size: 3.2rem;
       font-weight: 700;
+      position: relative;
+      .svg {
+        position: absolute;
+        top: 80%;
+        left: 20%;
+        svg {
+          font-size: 2.4rem;
+        }
+      }
     }
   }
 }
 @media (max-width: 30.62em) {
   .home {
     .cv-download {
-      padding: 1.5rem 3rem;
-
-      &::before {
-        content: " ";
-        height: 138%;
-      }
       .third-ellipse {
         display: none;
-      }
-    }
-  }
-}
-@media (max-width: 25.62em) {
-  .home {
-    .cv-download {
-      padding: 1.2rem 3rem;
-
-      &::before {
-        content: " ";
-        height: 140%;
-        width: 135%;
       }
     }
   }
