Add in build component

--- a/frontend/src/Scss/index.scss
+++ b/frontend/src/Scss/index.scss
@@ -23,3 +23,5 @@
 @use "./Components/tech-info";
 @use "./Components/nav-sm";
 @use "./Components/macarena-guy";
+
+@use "./Components/info_project";
