--- a/frontend/src/Scss/Pages/HeroPage/_cv-download.scss
+++ b/frontend/src/Scss/Pages/HeroPage/_cv-download.scss
@@ -12,7 +12,8 @@
     top: 0.1rem;
     right: 0;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-
+    cursor: pointer;
+    z-index: 20;
     &::before {
       content: " ";
       display: inline-block;
