--- a/admin/src/Scss/Components/_button.scss
+++ b/admin/src/Scss/Components/_button.scss
@@ -1,6 +1,10 @@
 @use "../General/" as g;
 .button-con {
   button {
+    &:hover {
+      transform: scale(1.1);
+    }
+    cursor: pointer;
     padding: 1.6rem 3.6rem;
     background-color: g.$primary;
     color: g.$fontColor;
