--- a/admin/src/Scss/Pages/AddProjectPanel/_skill-input.scss
+++ b/admin/src/Scss/Pages/AddProjectPanel/_skill-input.scss
@@ -24,6 +24,10 @@
     }
   }
   button {
+    &:hover {
+      transform: scale(1.1);
+    }
+    cursor: pointer;
     padding: 0.8rem;
     width: fit-content;
     background-color: g.$primary;
