--- a/frontend/src/Scss/Components/_project-card.scss
+++ b/frontend/src/Scss/Components/_project-card.scss
@@ -57,6 +57,7 @@
         .button-anchor {
           position: relative;
           .tech-info-button {
+            cursor: pointer;
             display: inline-block;
             border-radius: 0.8rem;
             border: 2px solid transparent;
