--- a/frontend/src/Scss/Components/_pop-up.scss
+++ b/frontend/src/Scss/Components/_pop-up.scss
@@ -8,7 +8,7 @@
     border-radius: 8px;
     @include g.glassEffect();
     overflow: hidden;
-    transition: all ease-in-out 3s;
+    transition: all ease-in-out 2s;
     p {
       position: relative;
       color: g.$fontColor;
@@ -19,7 +19,7 @@
       height: 100%;
       position: absolute;
       left: -100%;
-      top: 0;
+      top: 20%;
       border-radius: 8px;
       transition: ease-in left 2s;
     }
