--- a/frontend/src/Scss/index.scss
+++ b/frontend/src/Scss/index.scss
@@ -24,3 +24,5 @@
 @use "./Components/nav-sm";
 @use "./Components/macarena-guy";
 @use "./Components/info_project";
+@use "./Components/figma-card.scss";
+@use "./Components/all-design-projects";
