--- a/frontend/src/Scss/General/_mixins.scss
+++ b/frontend/src/Scss/General/_mixins.scss
@@ -15,6 +15,14 @@
   background: rgba(20, 26, 42, 0.25);
   backdrop-filter: blur(12px);
 }
+@mixin glassEffectBlue() {
+  background: rgba(74, 144, 226, 0.2);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(10.5px);
+  -webkit-backdrop-filter: blur(10.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
 @mixin animatedHoverGrad() {
   background: linear-gradient(
     80deg,
