--- a/frontend/src/Scss/General/_variables.scss
+++ b/frontend/src/Scss/General/_variables.scss
@@ -15,6 +15,13 @@ $borderGrad: linear-gradient(
   rgba(227, 0, 204, 0.296),
   $primary
 );
+$borderGradRev: linear-gradient(
+  30deg,
+  $primary,
+  rgba(227, 0, 204, 0.314),
+  rgba(227, 0, 204, 0.296),
+  $primary
+);
 $hoverGrad: linear-gradient(
   130deg,
   rgb(110, 125, 245),
